--- a/TermoStat/Info.plist
+++ b/TermoStat/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string> Please give information where are you</string>
 </dict>
 </plist>
